<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="10dp"

    >


    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:background="@color/display"
        />




    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:columnCount="4"
        android:rowCount="5"
        android:useDefaultMargins="true"
        >

        <Button
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/c"
            android:textSize="20sp"
            android:backgroundTint="@color/holud"

            >


        </Button>
        <Button
            android:id="@+id/del"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/del"
            android:backgroundTint="@color/del"
            android:textSize="20sp"
            >

        </Button>
        <Button
            android:id="@+id/fbracket"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/fbracket"
            android:textSize="20sp"
            android:backgroundTint="@color/holud"
            >
        </Button>
        <Button
            android:id="@+id/sbracket"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/sbracket"
            android:backgroundTint="@color/holud"
            android:textSize="20sp"
            >
        </Button>

        <Button
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/seven"
            android:textSize="20sp"
            android:backgroundTint="@color/lal"
            >


        </Button>
        <Button
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/eight"
            android:backgroundTint="@color/lal"
            android:textSize="20sp"
            >

        </Button>
        <Button
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/nine"
            android:textSize="20sp"
            android:backgroundTint="@color/lal"
            >

        </Button>
        <Button
            android:id="@+id/vag"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/vag"
            android:backgroundTint="@color/nil"
            android:textSize="20sp"

            >
        </Button>


        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/four"
            android:backgroundTint="@color/lal"
            android:textSize="20sp">

        </Button>
        <Button
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/five"
            android:backgroundTint="@color/lal"
            android:textSize="20sp"
            >

        </Button>
        <Button
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/six"
            android:backgroundTint="@color/lal"
            android:textSize="20sp">

        </Button>
        <Button
            android:id="@+id/gun"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/gun"
            android:textSize="20sp"
            android:backgroundTint="@color/nil"            >
        </Button>

        <Button
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/three"
            android:backgroundTint="@color/lal"
            android:textSize="20sp">

        </Button>
        <Button
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/two"
            android:backgroundTint="@color/lal"
            android:textSize="20sp"
            >

        </Button>
        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/one"
            android:backgroundTint="@color/lal"
            android:textSize="20sp">

        </Button>

        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/minus"
            android:backgroundTint="@color/nil"
            android:textSize="20sp">
        </Button>

        <Button
            android:id="@+id/point"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/point"
            android:backgroundTint="@color/lal"
            android:textSize="20sp">

        </Button>
        <Button
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/zero"
            android:backgroundTint="@color/lal"
            android:textSize="20sp"
            >

        </Button>

        <Button
            android:id="@+id/equal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/equal"
            android:backgroundTint="@color/lal"
            android:textSize="20sp">

        </Button>
        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/plus"
            android:backgroundTint="@color/nil"
            android:textSize="20sp">

        </Button>



    </GridLayout>

    </GridLayout>